5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1728_2507.log
== TEST (2019-06-10 10:45:42) 
-- CODE:
quantinicial = int(input("digite quantidade inicial: "))
percres = int(input("digite percentual de crescimento: "))
#quantmes = int(input("digite quantidada mensal: "))
#quantret = int(input("digite quantidade retirada: ")) 
quantvenda = int(input("digite quantidade de venda: "))

pirarucus = 0
meses = 0

while(quantinicial > 0):
	pirarucus = pirarucus + meses
	meses = meses + 1
	print("MAXIMO")

if(quantinicial < 0):
	print("ZERO")
	
-- OUTPUT:
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:45:37) 
-- CODE:
quantinicial = int(input("digite quantidade inicial: "))
percres = int(input("digite percentual de crescimento: "))
#quantmes = int(input("digite quantidada mensal: "))
#quantret = int(input("digite quantidade retirada: ")) 
quantvenda = int(input("digite quantidade de venda: "))

pirarucus = 0
meses = 0

while(quantinicial > 0):
	pirarucus = pirarucus + meses
	meses = meses + 1
	print("MAXIMO")

if(quantinicial < 0):
	print("ZERO")
	
-- OUTPUT:
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:50:02) 
-- CODE:
quantinicial = int(input("digite quantidade inicial: "))
percres = int(input("digite percentual de crescimento: "))
#quantmes = int(input("digite quantidada mensal: "))
#quantret = int(input("digite quantidade retirada: ")) 
quantvenda = int(input("digite quantidade de venda: "))

pirarucus = 0
meses = 0

while(quantinicial > 0):
	pirarucus = pirarucus + meses
	meses = meses + 1
	print("MAXIMO")

if(quantinicial < 0):
	print("ZERO")
	
-- OUTPUT:
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:44:45) 
-- CODE:
quantinicial = int(input("digite quantidade inicial: "))
percres = int(input("digite percentual de crescimento: "))
#quantmes = int(input("digite quantidada mensal: "))
#quantret = int(input("digite quantidade retirada: ")) 
quantvenda = int(input("digite quantidade de venda: "))

pirarucus = 0
meses = 0

while(quantinicial > 0):
	pirarucus = pirarucus + meses
	meses = meses + 1
	

if(quantinicial > 0):
	print("MAXIMO")
	else:
		print("ZERO")
	
-- ERROR:
File "XXXX", line 17
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:45:00) 
-- CODE:
quantinicial = int(input("digite quantidade inicial: "))
percres = int(input("digite percentual de crescimento: "))
#quantmes = int(input("digite quantidada mensal: "))
#quantret = int(input("digite quantidade retirada: ")) 
quantvenda = int(input("digite quantidade de venda: "))

pirarucus = 0
meses = 0

while(quantinicial > 0):
	pirarucus = pirarucus + meses
	meses = meses + 1
	

if(quantinicial > 0):
	print("MAXIMO")
else:
	print("ZERO")
	
-- ERROR:
File "XXXX", line 17
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:45:45) 
-- CODE:
quantinicial = int(input("digite quantidade inicial: "))
percres = int(input("digite percentual de crescimento: "))
#quantmes = int(input("digite quantidada mensal: "))
#quantret = int(input("digite quantidade retirada: ")) 
quantvenda = int(input("digite quantidade de venda: "))

pirarucus = 0
meses = 0

while(quantinicial > 0):
	pirarucus = pirarucus + meses
	meses = meses + 1
	if(quantinicial > 0):
		print("MAXIMO")
	else:
		print("ZERO")
	
-- OUTPUT:
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
